app/assets/stylesheets/bulletins.css.scss
// On the Bulletins Index page
.bulletin-wrapper {
  & > * {display: inline-block;}
  .bulletin-preview { width: 600px; }
  .vote {
    float: left;
    margin-right: 10px;
    cursor: pointer;
    display: block;
    width: 42px;
    height: 42px;
    background: url('upvote.png');
    background-size: 65%;
    background-position: center center;
    background-repeat: no-repeat;
  }
  .bulletin-preview {
    margin-bottom: 10px;
    border-bottom: solid 3px $brown2;
    background-color:lighten($brown2, 10%);
    padding:10px;
    .title {
      color: $brown3;
      font-weight:bold;
    }
    .link {
      float: right;
      color: lighten($brown4, 10%);
      text-decoration: underline;
    }
  } 
}

// Bulletin show page
.bulletin {
  .bulletin-header {
    border-bottom: dotted 1px $brown2;
    padding-bottom: 10px;
    h1 {
      padding-bottom: 10px;
    }
    span.date {
      color: $brown2;
    }
  }
  .bulletin-body {
    & > * {
      margin-bottom: 10px;
    }
    margin: 20px 0;
    min-height: 300px;
    width: 500px;
    ol, ul {
      margin-left: 40px;
    }
  }
}

.bulletin-new {
  textarea { min-height: 200px;}
  ol, ul {
    margin-left: 40px;
  }
  & > * {
    margin-bottom: 10px;
  }
}

